  sub-commands. For sub-commands involving "delta", this implies that
  all s.files inside "SCCS" directories that are currently edited are
  processed in their respective directories. For the other sub-commands,
  this implies that all s.files inside "SCCS" directories are processed.
* sccs: A manual page has been added (based on the 4.3BSD-Tahoe page).

Release 070211
* SCCS: Most of the manual pages are now available, based on source code
  released by Sun.
* make: Use a POSIX shell or a Bourne shell as default value for $(SHELL)
  depending on whether POSIX mode is enabled or not. The path names of
  these shells are set in "mk.config". Both default to "/bin/sh" to ensure
  that the package can be built portably, thus to actually use this feature,
  install the Heirloom Bourne shell in advance and then edit "mk.config".
* make: A new manual page is available, based on source code released by
  Sun.
* get: The %G% and %H% keywords omit leading zero digits in month or day
  numbers now, as previous (non-Solaris) versions of SCCS did.
* The tools have been ported to HP-UX.
* The tools have been ported to AIX.

Release 070119
* The "make" command has been added from OpenSolaris sources. Important
  changes to the OpenSolaris version are:

  * The "-j jobs" option is available, based on code distributed by Sun
    that was previously disabled.
  * SUN_MAKE_COMPAT_MODE is "GNU" by default. This has the effect that
    macro definitions on the command line become part of the MAKEFLAGS
    variable, and thus override definitions within makefiles in recursive
    operation. Also "$<" resolves to the first prerequisite in a target
    rule. Setting "SUN_MAKE_COMPAT_MODE=SUN" in the environment restores
    the previous behavior.

* sccs: Accept the "-a", "-p", and "-B" options to "diff" with the "diffs"
  and "sccsdiff" sub-commands.
* sccsdiff: Accept the "-a" and "-B" options to "diff"; also accept the
  "-P" option but pass it as "-p" to "diff".