@@ -21,7 +21,11 @@
 # Copyright 1994 Sun Microsystems, Inc. All rights reserved.
 # Use is subject to license terms.
 #
-# @(#)svr4.make.rules.file 1.4 06/12/12
+# from OpenSolaris svr4.make.rules.file 1.4 06/12/12
+#
+# Portions Copyright (c) 2007 Gunnar Ritter, Freiburg i. Br., Germany
+#
+# Sccsid @(#)svr4.make.rules.file	1.2 (gritter) 2/16/07
 #
 .SUFFIXES: .o .c .c~ .y .y~ .l .l~ .s .s~ .sh .sh~ .h .h~ .f .f~ \
 .C .C~ .Y .Y~ .L .L~
